--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "mvptodo",
   "id": "1410732015065350291",
   "api": "1.0.0",
-  "main": "code.js",
+  "main": "dist/code.js",
   "capabilities": [],
   "enableProposedApi": false,
   "documentAccess": "dynamic-page",
